--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,91 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16" />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
 </head>
 <body>
-    <h1>Hallo</h1>
+    <section class="section section-main">
+        <div class="container">
+            <header class="header flex">
+                <div class="header-menu flex">
+                    <div class="header-menu__button">
+                        <span></span>
+                    </div>
+                    <nav class="header-menu__list">
+                        <ul class="flex flex-center">
+                            <li>
+                                <a class="header-menu__link menu-link" href="#editions">
+                                    editions
+                            </a></li>
+                            <li><a class="header-menu__link menu-link" href="#controller">
+                                    controller</a></li>
+                            <li><a class="header-menu__link menu-link" href="#about">
+                                    about</a></li>
+                            <li><a class="header-menu__link menu-link" href="#explore">
+                                    explore</a></li>
+                            <li><a class="header-menu__link menu-link" href="#news">
+                                    news</a></li>
+                            <li><a class="header-menu__link menu-link" href="#faq">
+                                    faq</a></li>
+                            <li><div class="header-menu__link lang">
+                                    <span class="current-lang">english</span>
+                                    <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M0.159766 1.67328L5.61446 7.15492C5.71671 7.25772 5.85547 7.31546 6.00013 7.31546C6.14482 7.31546 6.28355 7.25768 6.38584 7.15488L11.8402 1.67325C12.0533 1.45917 12.0533 1.11211 11.8402 0.898032C11.6273 0.683992 11.2819 0.683956 11.0689 0.898032L6.00013 5.99205L0.931148 0.898032C0.824638 0.790994 0.685039 0.737493 0.545439 0.737493C0.405838 0.737493 0.266238 0.790994 0.15973 0.898068C-0.0532522 1.11214 -0.0532522 1.45921 0.159766 1.67328Z" fill="white"/>
+                                    </svg>
+                                    <div class="header-menu__languages">
+                                        <div class="header-menu__language">
+                                            Russian
+                                        </div>
+                                        <div class="header-menu__language">
+                                            English
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="header-timer flex flex-center">
+                    <span>Release:</span>
+                    <div class="header-timer__values flex flex-center">
+                        <div class="header-timer__item">
+                            <div class="header-timer__item-value" id="days">0</div>
+                            <div class="header-timer__item-info">D</div>
+                        </div>
+                        <div class="header-timer__item">
+                            <div class="header-timer__item-value" id="hours">0</div>
+                            <div class="header-timer__item-info">H</div>
+                        </div>
+                        <div class="header-timer__item">
+                            <div class="header-timer__item-value" id="minutes">0</div>
+                            <div class="header-timer__item-info">M</div>
+                        </div>
+                        <div class="header-timer__item">
+                            <div class="header-timer__item-value" id="seconds">0</div>
+                            <div class="header-timer__item-info">S</div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <div class="description">
+                <div class="description-title">
+                    <h1>God of War Ragnarök</h1>
+                    <div class="description-subtitle">
+                        Taking place three years following the events of the previous game, 
+                        Fimbulwinter, a great winter that spans three summers, 
+                        is drawing to a close which will begin the prophesied Ragnarök.
+                    </div>
+                    <div class="description-button">
+                        <span>buy now</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
