--- a/src/index.html
+++ b/src/index.html
@@ -391,5 +391,197 @@
             </div>
         </div>
     </section>
+
+    <section class="section section-news" id="news">
+        <h2>News</h2>
+
+        <div class="news swiper flex flex-center">
+            <div class="swaper-wrapper">
+                <div class="swiper-slide news-item">
+                    <div class="news-item__info flex">
+                        <div class="news-item__subtitle">
+                            God of War Ragnarok 
+                        </div>
+                        <div class="news-item__date">
+                            19/10/2022
+                        </div>
+
+                    </div>
+                    <div class="news-item__title">
+                        will receive a large update on release
+                    </div>
+                        <div class="news-item__description flex flex-center">
+                            <div class="news-item__img" style="background-image: url(./assets/images/news1.png);"></div>
+                                <div class="news-item__text flex">
+                                    <p>
+                                        God of War: Ragnarok is fast approaching. 
+                                        No wonder that we have been regularly receiving
+                                        new information and materials related to the title in recent times. 
+                                        Last week, a trailer presenting the possibilities of the game on PlayStation 5 
+                                        hit the network , and a little earlier we learned that the work on the production was completed . 
+                                        Meanwhile, it turns out that the upcoming sequel
+                                        to the adventures of Kratos and Atreus will receive a major update on release.
+                                    </p>
+                                    <a href="#" class="news-item__button">read</a>
+                                </div>
+                        </div>
+                </div>
+                <div class="swiper-slide news-item">
+                    <div class="news-item__info flex">
+                        <div class="news-item__subtitle">
+                            God of War Ragnarok 
+                        </div>
+                        <div class="news-item__date">
+                            19/10/2022
+                        </div>
+
+                    </div>
+                    <div class="news-item__title">
+                        is officially one of the largest PS4 games by size
+                    </div>
+                        <div class="news-item__description flex flex-center">
+                            <div class="news-item__img" style="background-image: url(./assets/images/news2.png);"></div>
+                                <div class="news-item__text flex">
+                                    <p>
+                                        Digital distribution enthusiasts need to get ready for tons of downloads. 
+                                        The second adventure of Kratos and Atreus in the High North from the premiere will occupy nearly 
+                                        120GB - when deciding to buy a title from PlayStation Store, 
+                                        it is worth planning your download wisely to start the game on the day of the premiere.
+                                    </p>
+                                    <a href="#" class="news-item__button">read</a>
+                                </div>
+                        </div>
+                </div>
+                <div class="swiper-slide news-item">
+                    <div class="news-item__info flex">
+                        <div class="news-item__subtitle">
+                            God of War Ragnarok 
+                        </div>
+                        <div class="news-item__date">
+                            19/10/2022
+                        </div>
+
+                    </div>
+                    <div class="news-item__title">
+                        is the final chapter in an epic story. See the new video
+                    </div>
+                        <div class="news-item__description flex flex-center">
+                            <div class="news-item__img" style="background-image: url(./assets/images/news3.png);"></div>
+                                <div class="news-item__text flex">
+                                    <p>
+                                        Familiar characters will return to the game, but also completely new ones. We are talking here about Thor,
+                                        presented as a brutal and mentally unstable performer of "dirty work" in the services of Odin , 
+                                        as well as the ruler of the gods himself, who left his mark on the events of the previous installment, 
+                                        although he did not appear in it personally.
+                                    </p>
+                                    <a href="#" class="news-item__button">read</a>
+                                </div>
+                        </div>
+                </div>
+                <div class="swiper-slide news-item">
+                    <div class="news-item__info flex">
+                        <div class="news-item__subtitle">
+                            God of War Ragnarok 
+                        </div>
+                        <div class="news-item__date">
+                            19/10/2022
+                        </div>
+
+                    </div>
+                    <div class="news-item__title">
+                        tells a mature story
+                    </div>
+                        <div class="news-item__description flex flex-center">
+                            <div class="news-item__img" style="background-image: url(./assets/images/news4.png);"></div>
+                                <div class="news-item__text flex">
+                                    <p>
+                                        The highly anticipated game God of War: Ragnarok will debut in just over twenty days. 
+                                        On this occasion, representatives of the Santa Monica studio together with Sony decided to release 
+                                        a new trailer dedicated to the epic history of Kratos and Atreus - 
+                                        in this way we have received confirmation that Ragnarok is the final chapter of the adventures of the god of war.
+                                    </p>
+                                    <a href="#" class="news-item__button">read</a>
+                                </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="swiper-button-prev swiper-button flex flex-center">
+                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect y="0.407227" width="32" height="31.8418" rx="6" fill="#8C96A0"/>
+                    <g clip-path="url(#clip0_12_28)">
+                    <path d="M18.9221 8.57963L11.6494 15.8166C11.513 15.9523 11.4364 16.1364 11.4364 16.3283C11.4364 16.5203 11.5131 16.7043 11.6494 16.84L18.9222 24.0766C19.2062 24.3592 19.6667 24.3592 19.9507 24.0766C20.2347 23.794 20.2347 23.3358 19.9507 23.0532L13.1922 16.3283L19.9507 9.60305C20.0927 9.46174 20.1637 9.27653 20.1637 9.09131C20.1637 8.9061 20.0927 8.72089 19.9506 8.57958C19.6666 8.297 19.2061 8.297 18.9221 8.57963Z" fill="white"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_12_28">
+                    <rect width="15.9209" height="16" fill="white" transform="matrix(0 -1 1 0 7 24.2886)"/>
+                    </clipPath>
+                    </defs>
+                    </svg>
+            </div>
+            <div class="swiper-button-next swiper-button flex flex-center">
+                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="32" y="32.249" width="32" height="31.8418" rx="6" transform="rotate(180 32 32.249)" fill="#8856D9"/>
+                    <g clip-path="url(#clip0_12_29)">
+                    <path d="M14.0779 24.0766L21.3507 16.8397C21.487 16.704 21.5636 16.5199 21.5636 16.328C21.5636 16.136 21.487 15.9519 21.3506 15.8162L14.0779 8.57964C13.7939 8.29702 13.3334 8.29702 13.0494 8.57964C12.7654 8.86221 12.7653 9.32045 13.0494 9.60307L19.8078 16.328L13.0494 23.0532C12.9074 23.1945 12.8364 23.3797 12.8364 23.5649C12.8364 23.7502 12.9074 23.9354 13.0494 24.0767C13.3334 24.3592 13.7939 24.3592 14.0779 24.0766Z" fill="white"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_12_29">
+                    <rect width="15.9209" height="16" fill="white" transform="matrix(0 1 -1 0 26 8.36768)"/>
+                    </clipPath>
+                    </defs>
+                    </svg>
+            </div>
+        </div>
+    </section>
+    <section class="section section-faq" id="faq">
+        <div class="container">
+            <h2>FAQ</h2>
+
+            <div class="faq-items flex">
+                <div class="faq-item">
+                    <div class="faq-item__header flex">
+                        <p>When is the next God of War coming out?</p>
+                        <span class="flex flex-center"></span>
+                    </div>
+                    <div class="faq-item__content">
+                        <p>
+                            God of War Ragnarök will release on <span>November 9, 2022. </span>
+                            To get the latest updates on release timing, 
+                            make sure you follow Santa Monica Studio on Twitter, 
+                            Instagram and Facebook! 
+                        </p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__header flex">
+                        <p>Will God of War Ragnarök have an upgrade path?</p>
+                        <span class="flex flex-center"></span>
+                    </div>
+                    <div class="faq-item__content">
+                        <p>
+                            Yes, of course!
+                        </p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__header flex">
+                        <p>What is god of war about?</p>
+                        <span class="flex flex-center"></span>
+                    </div>
+                    <div class="faq-item__content">
+                        <p>
+                            First era (Greek mythology) God of War was first released in
+                            North America on March 22, 2005, for the PlayStation 2. After
+                            ten years in the service of the Olympian gods, Spartan soldier
+                            Kratos is tasked by Athena to find Pandora's box, the key to
+                            defeating Ares, the God of War, who is running amok through
+                            Athens.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
