--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,8 @@
                                     news</a></li>
                             <li><a class="header-menu__link menu-link" href="#faq">
                                     faq</a></li>
-                            <li><div class="header-menu__link lang">
+                            <li>
+                                <div class="header-menu__link lang">
                                     <span class="current-lang">english</span>
                                     <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0.159766 1.67328L5.61446 7.15492C5.71671 7.25772 5.85547 7.31546 6.00013 7.31546C6.14482 7.31546 6.28355 7.25768 6.38584 7.15488L11.8402 1.67325C12.0533 1.45917 12.0533 1.11211 11.8402 0.898032C11.6273 0.683992 11.2819 0.683956 11.0689 0.898032L6.00013 5.99205L0.931148 0.898032C0.824638 0.790994 0.685039 0.737493 0.545439 0.737493C0.405838 0.737493 0.266238 0.790994 0.15973 0.898068C-0.0532522 1.11214 -0.0532522 1.45921 0.159766 1.67328Z" fill="white"/>
@@ -507,7 +508,11 @@
             </div>
 
             <div class="swiper-button-prev swiper-button flex flex-center">
-                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="10" height="17" viewBox="0 0 10 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.92212 0.579625L0.649395 7.8166C0.513007 7.95226 0.436401 8.13637 0.436401 8.32828C0.436401 8.52025 0.513056 8.70431 0.649444 8.84002L7.92217 16.0766C8.2062 16.3592 8.66666 16.3592 8.95068 16.0766C9.23466 15.794 9.2347 15.3358 8.95068 15.0532L2.19223 8.32828L8.95068 1.60305C9.09269 1.46174 9.16367 1.27653 9.16367 1.09131C9.16367 0.906099 9.09269 0.720886 8.95063 0.579576C8.66661 0.297005 8.20615 0.297005 7.92212 0.579625Z" fill="white"/>
+                    </svg>
+                    
+                <!-- <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect y="0.407227" width="32" height="31.8418" rx="6" fill="#8C96A0"/>
                     <g clip-path="url(#clip0_12_28)">
                     <path d="M18.9221 8.57963L11.6494 15.8166C11.513 15.9523 11.4364 16.1364 11.4364 16.3283C11.4364 16.5203 11.5131 16.7043 11.6494 16.84L18.9222 24.0766C19.2062 24.3592 19.6667 24.3592 19.9507 24.0766C20.2347 23.794 20.2347 23.3358 19.9507 23.0532L13.1922 16.3283L19.9507 9.60305C20.0927 9.46174 20.1637 9.27653 20.1637 9.09131C20.1637 8.9061 20.0927 8.72089 19.9506 8.57958C19.6666 8.297 19.2061 8.297 18.9221 8.57963Z" fill="white"/>
@@ -517,10 +522,10 @@
                     <rect width="15.9209" height="16" fill="white" transform="matrix(0 -1 1 0 7 24.2886)"/>
                     </clipPath>
                     </defs>
-                    </svg>
+                    </svg> -->
             </div>
             <div class="swiper-button-next swiper-button flex flex-center">
-                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect x="32" y="32.249" width="32" height="31.8418" rx="6" transform="rotate(180 32 32.249)" fill="#8856D9"/>
                     <g clip-path="url(#clip0_12_29)">
                     <path d="M14.0779 24.0766L21.3507 16.8397C21.487 16.704 21.5636 16.5199 21.5636 16.328C21.5636 16.136 21.487 15.9519 21.3506 15.8162L14.0779 8.57964C13.7939 8.29702 13.3334 8.29702 13.0494 8.57964C12.7654 8.86221 12.7653 9.32045 13.0494 9.60307L19.8078 16.328L13.0494 23.0532C12.9074 23.1945 12.8364 23.3797 12.8364 23.5649C12.8364 23.7502 12.9074 23.9354 13.0494 24.0767C13.3334 24.3592 13.7939 24.3592 14.0779 24.0766Z" fill="white"/>
@@ -530,7 +535,10 @@
                     <rect width="15.9209" height="16" fill="white" transform="matrix(0 1 -1 0 26 8.36768)"/>
                     </clipPath>
                     </defs>
-                    </svg>
+                    </svg> -->
+                <svg width="10" height="17" viewBox="0 0 10 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.07792 16.0766L9.35065 8.83965C9.48704 8.70399 9.56364 8.51988 9.56364 8.32797C9.56364 8.136 9.48699 7.95194 9.3506 7.81623L2.07787 0.579641C1.79385 0.297021 1.33339 0.297021 1.04937 0.579641C0.765389 0.862213 0.765341 1.32045 1.04937 1.60307L7.80781 8.32797L1.04937 15.0532C0.907353 15.1945 0.836371 15.3797 0.836371 15.5649C0.836371 15.7502 0.907353 15.9354 1.04941 16.0767C1.33344 16.3592 1.7939 16.3592 2.07792 16.0766Z" fill="white"/>
+                </svg>
             </div>
         </div>
     </section>
@@ -583,5 +591,53 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-top flex">
+                <ul class="footer-menu flex flex-center">
+                    <li>
+                        <a class="menu-link" href="#editions">
+                            editions
+                    </a></li>
+                    <li><a class="menu-link" href="#controller">
+                            controller</a></li>
+                    <li><a class="menu-link" href="#about">
+                            about</a></li>
+                    <li><a class="menu-link" href="#explore">
+                            explore</a></li>
+                    <li><a class="menu-link" href="#news">
+                            news</a></li>
+                    <li><a class="menu-link" href="#faq">
+                            faq</a></li>
+                    <li>
+                </ul>
+
+                <div class="footer-lang flex">
+                    <span>Language:</span>
+
+                    <div class="footer-lang__list">
+                        <div class="footer-lang__current">
+                            english
+                        </div>
+                        <div class="footer-lang__content">
+                            <div class="footer-lang__content-item">russian</div>
+                            <div class="footer-lang__content-item">english</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-info">
+                Download of this product is subject to the PlayStation Network Terms of Service and our Software Usage Terms plus any specific additional conditions applying to this product. 
+                If you do not wish to accept these terms, do not download this product. See Terms of Service for more important information.
+            </div>
+            <div class="footer-icon">
+                <img src="./assets/images/ps-logo.png" alt="logo">
+            </div>
+            <div class="footer-year">2023</div>
+            <div class="footer-rights">
+                Developed by <a href="https://github.com/HeikkeB">HeikkeB</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
